CSS fixes for the buttons on smaller screens.
Better, but these buttons are still a huge pain.

--- a/src/Contacts/ContactAdd.css
+++ b/src/Contacts/ContactAdd.css
@@ -1,10 +1,10 @@
 .btn {
   margin-left: .5vw;
-  margin-top: 1vh;
   margin-right: .5vw;
   width: 34vw;
 }
 
 .ContactAdd {
-  width: 20vw;
+  margin-top: 1vh;
+  width: 25vw;
 }
